# dtree

./: .dtree.toml  .gitignore  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  Cargo.toml  GIT.md  HELP.txt  HELP_UNIX.txt  HELP_WINDOWS.txt  LICENSE  PHASE3_COMPLETION_REPORT.md  README.md  RELEASING.md  TESTING_WINDOWS.md  WINDOWS_PORTING_GUIDE.md  dt.bat  install-linux.sh  install-windows-binary.ps1  install-windows-wrapper.ps1  install-windows.ps1  replace-wrapper.ps1  uninstall-linux.sh  uninstall-windows.ps1  update-wrapper.ps1
.claude/: settings.local.json
.github/: GETTING_STARTED.md  RELEASE_CHECKLIST.md  WORKFLOWS.md
.github/workflows/: ci.yml  release.yml
demos/: FIXES.md  QUICKSTART.md  README.md  bookmarks.tape  example_template.tape  file_viewer.tape  generate_all.sh  record_demos.md  search.tape  tree_navigation.tape  visual_selection.tape
docs/: DEMOS.md  SUMMARY.md  architecture.md  cli-options.md  configuration.md  contributing.md  features.md  getting-started.md  installation.md  introduction.md  keybindings.md  troubleshooting.md  usage.md
docs/assets/: .gitkeep  README.md
src/: app.rs  app.rs.backup  bookmarks.rs  config.rs  dir_size.rs  event_handler.rs  file_icons.rs  file_viewer.rs  lib.rs  main.rs  navigation.rs  platform.rs  search.rs  terminal.rs  tree_node.rs  ui.rs
src/theme/: mod.rs  presets.rs
tests/: quit_on_file_test.rs  tail_mode_test.rs
