# Cargo.toml
[package]
name = "dtree"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
arboard = "3.4"
unicode-width = "0.1"
unicode-truncate = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
syntect = "5.2"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.13"