# Cargo.toml
[package]
name = "dtree-tui"
version = "1.1.0"
edition = "2021"
authors = ["holgertkey"]
license = "MIT"
description = "A fast, lightweight TUI for interactive directory tree navigation with file preview and fuzzy search"
repository = "https://github.com/holgertkey/dtree"
keywords = ["cli", "tui", "directory", "tree", "file-manager"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"
exclude = [
    ".claude/",
    "demos/",
    "docs/assets/*.gif",
    "install-*.sh",
    "install-*.ps1",
    "uninstall-*.sh",
    "uninstall-*.ps1",
    "dt.bat",
    "*.backup",
]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
arboard = "3.4"
unicode-width = "0.1"
unicode-truncate = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
syntect = "5.2"
once_cell = "1.19"
crossbeam-channel = "0.5"
fuzzy-matcher = "0.3"
which = "6.0"

[dev-dependencies]
tempfile = "3.13"

[profile.release]
# Optimize for size
opt-level = "z"         # Optimize for size instead of speed
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Single codegen unit for better optimization
strip = true            # Strip symbols from binary
panic = "abort"         # Abort on panic instead of unwinding (smaller binary)